Added broadcast of the scores of all player if the game timer runs out. fix wrong set messages fix wrong set late join tap completion order fix wrongly colored language lines